testsuite/bsc.interra/libraries/List/Null.bsv.bsc-ccomp-out.expected
checking package dependencies
Error: "Null.bsv", line 12, column 11: (P0005)
  Unexpected SV 3.1 keyword `null'; expected expression or `('
